--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
             <meta name="viewport" content="width=device-width, intial-scale=1.0">
         </head>
         <body>
+        <div>
+            3
+        </div>
+
             <div id="mousePosition">
         
             </div>
