--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         </head>
         <body>
         <div>
-            10
+            12
         </div>
 
-            <div id="mousePosition">
-        
-            </div>
+        <div id="debugDisplay">
+
+        </div>
+
         </body>
         <script src="script.js"></script>
     </html>
