--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
     <html>
         <head>
             <title>touchMove</title>
+
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, intial-scale=1.0">
             <style src="style.css"></style>
         </head>
         <body>
         <div>
-            14
+            16
         </div>
-        <div>
+        <div id="touchArea">
             <table style="cursor:pointer">
                 <tr>
                     <td>ferfregreg</td>
