--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
             <title>touchMove</title>
 
             <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, intial-scale=1.0">
+            <meta name="viewport" content="width=device-width, intial-scale=1.0, maximum-scale=1.0">
             <style src="style.css"></style>
         </head>
         <body>
         <div>
-            17
+            18
         </div>
         <div id="touchArea">
             <table style="cursor:pointer">
