--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         </head>
         <body>
         <div>
-            18
+            19
         </div>
-        <div id="touchArea">
+        <div id="touchArea" onselectstart="return false">
             <table style="cursor:pointer">
                 <tr>
                     <td>ferfregreg</td>
