--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         </head>
         <body>
         <div>
-            19
+            20
         </div>
         <div id="touchArea" onselectstart="return false">
-            <table style="cursor:pointer">
+            <table style="cursor:pointer" onselectstart="return false">
                 <tr>
                     <td>ferfregreg</td>
                     <td>rgregrg</td>
