--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         </head>
         <body>
         <div>
-            20
+            21
         </div>
-        <div id="touchArea" onselectstart="return false">
-            <table style="cursor:pointer" onselectstart="return false">
+        <div id="touchArea" onmousedown="return false" onselectstart="return false">
+            <table style="cursor:pointer" onmousedown="return false" onselectstart="return false">
                 <tr>
                     <td>ferfregreg</td>
                     <td>rgregrg</td>
