--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         </head>
         <body>
         <div>
-            28
+            29
         </div>
         <div id="touchArea" onmousedown="return false" onselectstart="return false">
             <table style="cursor:pointer" onmousedown="return false" onselectstart="return false">
@@ -70,6 +70,9 @@
             </table>
         </div>
         <div id="debugDisplay">
+
+        </div>
+        <div id="debugDisplay2">
 
         </div>
 
